[gd_scene load_steps=13 format=2]

[ext_resource path="res://EuBraBo/assets/inimigos/png-Sheet/zombie_norma-Sheet.png" type="Texture" id=1]
[ext_resource path="res://EuBraBo/scrips/zumbiNormal.gd" type="Script" id=2]
[ext_resource path="res://EuBraBo/Sounds/Passos.ogg" type="AudioStream" id=3]
[ext_resource path="res://EuBraBo/Sounds/Sounds/hit zumbie 1.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("textura:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "atack"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=4]
resource_name = "damage"
length = 0.42
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 15 ]
}

[sub_resource type="Animation" id=6]
resource_name = "die"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24 ]
}

[sub_resource type="Animation" id=1]
resource_name = "ide"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 9 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 5, 6 ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 7.0
height = 6.0

[sub_resource type="CircleShape2D" id=8]
radius = 99.4585

[node name="zumbiNormal" type="KinematicBody2D" groups=["inimigos1"]]
script = ExtResource( 2 )
textura_path = NodePath("textura")
animZumbiN_path = NodePath("animZumbiN")

[node name="PassosZumbi" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -16.228

[node name="AudioHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="textura" type="Sprite" parent="."]
position = Vector2( -0.815455, -3.75002 )
scale = Vector2( 1.52868, 1.47917 )
texture = ExtResource( 1 )
hframes = 25

[node name="animZumbiN" type="AnimationPlayer" parent="."]
autoplay = "ide"
anims/RESET = SubResource( 2 )
anims/atack = SubResource( 5 )
anims/damage = SubResource( 4 )
anims/die = SubResource( 6 )
anims/ide = SubResource( 1 )
anims/run = SubResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="deterquito" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="deterquito"]
position = Vector2( 0, -2.38419e-07 )
rotation = 0.261799
shape = SubResource( 8 )

[connection signal="body_entered" from="deterquito" to="." method="_on_deterquito_body_entered"]
[connection signal="body_exited" from="deterquito" to="." method="_on_deterquito_body_exited"]
